# as3_workout_plan

./: .gitignore  Makefile  README.md  pyproject.toml
app/: main.py
app/modules/workoutAdvisor/: prompt.py  router.py
app/utils/: openai.py  tools.py
templates/: index.html
